--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "ncp": "^2.0.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "uuidv4": "^6.2.13"
